--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ logs/history/*
 !logs/history/README.md
 webui_lite/README.md
 webui_lite/node_modules/
+
+# Portable build environment (created by tools/setup_local_env.py)
+tools/.venv/
+tools/.platformio/
