--- a/tools/build-targets.yml
+++ b/tools/build-targets.yml
@@ -9,4 +9,4 @@ platformio_envs:
   # - esp32-s3-build          # build-only variant
   # - seeed_xiao_esp32s3-dev  # Seeed XIAO ESP32-S3
   # - seeed_xiao_esp32s-build # S3 build-only variant
-  - seeed_xiao_esp32c3-build# C3 build-only variant
+  # - seeed_xiao_esp32c3-build# C3 build-only variant
