new methodology for purge lines

--- a/data/user_settings.json
+++ b/data/user_settings.json
@@ -1,22 +1,30 @@
 {
-  "ssid": "",
-  "passwd": "",
-  "elegooip": "",
-  "pause_on_runout": true,
+  "ssid": "twentycharactrstring",
+  "passwd": "twentycharactrstring",
+  "elegooip": "twentycharactrstring",
   "ap_mode": false,
-  "start_print_timeout": 6000,
-  "enabled": true,
   "has_connected": false,
   "detection_length_mm": 7.0,
-  "detection_grace_period_ms": 500,
+  "movement_mm_per_pulse": 2.88,
+  "detection_grace_period_ms": 8000,
+  "detection_min_start_mm": 12,
+  "purge_filament_mm": 47,
   "tracking_mode": 1,
   "tracking_window_ms": 3000,
   "tracking_ewma_alpha": 0.3,
-  "sdcp_loss_behavior": 2,
-  "flow_telemetry_stale_ms": 1500,
-  "ui_refresh_interval_ms": 1000,
+  "detection_ratio_threshold": 0.25,
+  "detection_soft_jam_time_ms": 10000,
+  "detection_hard_jam_mm": 5.0,
+  "detection_hard_jam_time_ms": 5000,
+  "start_print_timeout": 6000,
+  "pause_on_runout": false,
+  "enabled": true,
+  "auto_calibrate_sensor": false,
   "dev_mode": false,
   "verbose_logging": true,
   "flow_summary_logging": false,
-  "movement_mm_per_pulse": 3.025
+  "sdcp_loss_behavior": 2,
+  "flow_telemetry_stale_ms": 1500,
+  "ui_refresh_interval_ms": 1000,
+  "pin_debug_logging": false
 }
