--- a/platformio.ini
+++ b/platformio.ini
@@ -24,12 +24,13 @@ lib_deps =
 	esp32async/ESPAsyncWebServer@3.7.3
 	links2004/WebSockets@^2.6.1
 	robtillaart/UUID@^0.2.0
-build_flags = 
+build_flags =
 	-D ELEGANTOTA_USE_ASYNC_WEBSERVER=1
 	-D FIRMWARE_VERSION_RAW=${sysenv.FIRMWARE_VERSION}
 	-D CHIP_FAMILY_RAW=${sysenv.CHIP_FAMILY}
 	; -D FILAMENT_RUNOUT_PIN=12
 	; -D MOVEMENT_SENSOR_PIN=13
+	; -D INVERT_RUNOUT_PIN=1  ; Uncomment in board config if pin logic is inverted
 
 [env:esp32-dev]
 board = esp32dev
@@ -64,7 +65,8 @@ lib_compat_mode = strict
 board_build.filesystem = littlefs
 build_flags =
     ${common.build_flags}
-lib_deps = 
+    ; -D INVERT_RUNOUT_PIN=1  ; This board needs inverted runout pin logic
+lib_deps =
 		${common.lib_deps}
 extra_scripts = tools/merge_bin.py
 
@@ -109,30 +111,54 @@ extra_scripts = tools/merge_bin.py
 
 [env:seeed_xiao_esp32c3-dev]
 ; Adjust FILAMENT_RUNOUT_PIN / MOVEMENT_SENSOR_PIN here to remap the hardware lines
+; Uncomment INVERT_RUNOUT_PIN if your board reports 0 when filament is present
 board = seeed_xiao_esp32c3
 platform = ${common.platform}
 framework = ${common.framework}
 lib_compat_mode = strict
 board_build.filesystem = littlefs
+board_build.partitions = min_spiffs.csv
 build_flags =
     ${common.build_flags}
     -D FILAMENT_RUNOUT_PIN=3
     -D MOVEMENT_SENSOR_PIN=2
+    ; -D INVERT_RUNOUT_PIN=1  ; Removed - sensor outputs HIGH when filament is present
+    -Os
+    -DCORE_DEBUG_LEVEL=0
+    -fno-exceptions
+    -ffunction-sections
+    -fdata-sections
+    -Wl,--gc-sections
+build_unflags =
+    -O2
+    -O3
 lib_deps =
         ${common.lib_deps}
 extra_scripts = tools/merge_bin.py
 
 [env:seeed_xiao_esp32c3-build]
 ; Build-only variant (used by CI or merge script)
+; Uncomment INVERT_RUNOUT_PIN if your board reports 0 when filament is present
 board = seeed_xiao_esp32c3
 platform = ${common.platform}
 framework = ${common.framework}
 lib_compat_mode = strict
 board_build.filesystem = littlefs
+board_build.partitions = min_spiffs.csv
 build_flags =
     ${common.build_flags}
     -D FILAMENT_RUNOUT_PIN=3
     -D MOVEMENT_SENSOR_PIN=2
+    ; -D INVERT_RUNOUT_PIN=1  ; Removed - sensor outputs HIGH when filament is present
+    -Os
+    -DCORE_DEBUG_LEVEL=0
+    -fno-exceptions
+    -ffunction-sections
+    -fdata-sections
+    -Wl,--gc-sections
+build_unflags =
+    -O2
+    -O3
 lib_deps =
         ${common.lib_deps}
 extra_scripts = tools/merge_bin.py
