--- a/data/user_settings.json
+++ b/data/user_settings.json
@@ -4,8 +4,8 @@
   "elegooip": "twentycharactrstring",
   "ap_mode": false,
   "has_connected": false,
-  "detection_length_mm": 7.0,
-  "movement_mm_per_pulse": 2.88,
+  "detection_length_mm": 12.0,
+  "movement_mm_per_pulse": 3.015,
   "detection_grace_period_ms": 8000,
   "detection_min_start_mm": 12,
   "purge_filament_mm": 47,
@@ -16,11 +16,11 @@
   "detection_soft_jam_time_ms": 10000,
   "detection_hard_jam_mm": 5.0,
   "detection_hard_jam_time_ms": 5000,
-  "start_print_timeout": 6000,
-  "pause_on_runout": false,
+  "start_print_timeout": 15000,
+  "pause_on_runout": true,
   "enabled": true,
   "auto_calibrate_sensor": false,
-  "dev_mode": false,
+  "dev_mode": true,
   "verbose_logging": true,
   "flow_summary_logging": false,
   "sdcp_loss_behavior": 2,
