Preserving changes before moving to fork

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32s3
+default_envs = esp32c3supermini
 
 [env]
 monitor_speed = 115200
@@ -169,6 +169,42 @@ extra_scripts =
      -D OLED_SCL_PIN=6
      -D OLED_DISPLAY_MODE=5
 extends = env:esp32c3
+
+[env:blink_test]
+; Minimal boot test - blink and serial output
+board = esp32-c3-devkitm-1
+platform = ${common.platform}
+framework = ${common.framework}
+build_flags =
+    -D ARDUINO_USB_CDC_ON_BOOT=1
+    -D ARDUINO_USB_MODE=1
+build_src_filter =
+    -<*>
+    +<../test/blink_test.cpp>
+
+[env:wifi_scanner]
+; WiFi network scanner to diagnose connectivity
+board = esp32-c3-devkitm-1
+platform = ${common.platform}
+framework = ${common.framework}
+build_flags =
+    -D ARDUINO_USB_CDC_ON_BOOT=1
+    -D ARDUINO_USB_MODE=1
+build_src_filter =
+    -<*>
+    +<../test/wifi_scanner.cpp>
+
+[env:i2c_scanner]
+; I2C scanner utility to find OLED pins
+board = esp32-c3-devkitm-1
+platform = ${common.platform}
+framework = ${common.framework}
+build_flags =
+    -D ARDUINO_USB_CDC_ON_BOOT=1
+    -D ARDUINO_USB_MODE=1
+build_src_filter =
+    -<*>
+    +<../test/i2c_scanner.cpp>
 
 [env:native]
 platform = native
